--- a/style.css
+++ b/style.css
@@ -1,25 +1,25 @@
 body {
-    background-color: #b3e0ff; /* Couleur de fond bleue douce */
-    font-family: 'Comic Sans MS', cursive, sans-serif; /* Police style bande dessinée */
-    color: #000; /* Couleur du texte */
-    text-align: center; /* Centrer le texte */
+    background-color: #b3e0ff; 
+    font-family: 'Comic Sans MS', cursive, sans-serif; 
+    color: #000;
+    text-align: center; 
 }
 
 h1 {
-    color: #ff8c00; /* Jaune pour le titre */
+    color: #ff8c00; 
 }
 
 h2 {
-    color: #ff6600; /* Orange pour les sous-titres */
+    color: #ff6600; 
 }
 
 .container {
     margin: auto;
     padding: 20px;
-    border: 5px solid #ee660b; /* Bordure jaune */
-    border-radius: 10px; /* Coins arrondis */
-    background-color: rgba(255, 255, 255, 0.8); /* Fond blanc légèrement transparent */
-    box-shadow: 0 0 20px rgba(0, 0, 0, 0.5); /* Ombre portée */
+    border: 5px solid #ee660b; 
+    border-radius: 10px;
+    background-color: rgba(255, 255, 255, 0.8); 
+    box-shadow: 0 0 20px rgba(0, 0, 0, 0.5);
     margin-left:30%;
     margin-right:30%;
     margin-top:5%;
@@ -38,26 +38,26 @@ button {
 }
 
 #add-cost {
-    background-color: #4caf50; /* Vert pour le bouton "Add Character" */
+    background-color: #4caf50; 
     color: white;
 }
 
 #generate-btn {
-    background-color: #2196F3; /* Bleu pour le bouton "Generate" */
+    background-color: #2196F3;
     color: white;
 }
 
 .remove-cost {
-    background-color: #f44336; /* Rouge pour le bouton "Delete" */
+    background-color: #f44336; 
     color: white;
 }
 
 #total-cost {
     font-size: 18px;
     margin-top: 20px;
-    color: #b35656; /* Couleur jaune pour le coût total */
+    color: #b35656; 
 }
 
 .hidden {
-    display: none; /* Cacher les éléments */
+    display: none;
 }
