--- a/style.css
+++ b/style.css
@@ -13,6 +13,10 @@ h2 {
     color: #ff6600; 
 }
 
+label{
+    color: #7e0000;
+    font-size:180%;
+}
 .container {
     margin: auto;
     padding: 20px;
@@ -60,4 +64,45 @@ button {
 
 .hidden {
     display: none;
+}
+
+.cost, .quantity {
+    font-family: 'Comic Sans MS', cursive, sans-serif;
+    width: 80px; 
+    height: 35px; 
+    font-size: 24px; 
+    border: 2px solid #b35656; 
+    border-radius: 5px; 
+    background-color: #dddbdb; 
+    color: #7e0000; 
+    text-align: center; 
+    outline: none;
+    transition: border-color 0.3s; 
+}
+
+.cost:focus, .quantity:focus {
+    border-color: #ff9900; 
+}
+
+button {
+    font-family: 'Comic Sans MS', cursive, sans-serif;
+    background-color: #ffcc00; 
+    color: #333; 
+    border: none;
+    border-radius: 5px;
+    padding: 10px 20px;
+    font-size: 16px;
+    cursor: pointer;
+    transition: background-color 0.3s, transform 0.2s; 
+}
+
+
+button:hover {
+    background-color: #e6b800; 
+    transform: scale(1.05); 
+}
+
+
+.remove-cost:hover {
+    background-color: #ff6666; 
 }
