--- a/style.css
+++ b/style.css
@@ -106,3 +106,13 @@ button:hover {
 .remove-cost:hover {
     background-color: #ff6666; 
 }
+
+#character-list a {
+    color: inherit; 
+    text-decoration: none; 
+}
+
+#character-list a:hover {
+    text-decoration: underline; 
+    color: gold; 
+}
