--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-    background-color: #b3e0ff; 
+    background-color: #808080; 
     font-family: 'Comic Sans MS', cursive, sans-serif; 
     color: #000;
     text-align: center; 
